# epstein-network

./: .gitignore  .prettierignore  .prettierrc.json  README.md  create_thumbnails.sh  dataset.json  eslint.config.js  image_data.json  index.html  package-lock.json  package.json  pyproject.toml  robots.txt  styles.css
.do/: app.yaml
api/: api.py
epstein_photos/: __init__.py  config.py  faces_db.py  sheets_common.py  spaces.py  utils.py  webp.py
scripts/: 00__cluster_faces.py  00__extract_pdf_images.sh  01__dedup_images.py  01__extract_faces.py  02__create_graph.py  02__downsize_images.sh  03__preprocess_faces.py  03__visualize_graph.py  04__cluster_faces.py  04__index_faces.py  05__cluster_faces.py  05__cluster_faces_robust.py  05__moderate_images.py  05__recognize_celebrities.py  06__extract_faces.py  06__moderate_images.py  07__create_graph.py  07__recognize_celebrities.py  08__create_thumbnails.sh  08__extract_faces.py  08__visualize_graph.py  09__create_graph.py  09__sheets_rekognition.py  09__upload_to_spaces.py  10__create_graph.py  11__create_thumbnails.sh  11__export_node_faces.py  11__upload_to_spaces.py  12__export_node_faces.py  12__upload_to_spaces.py  12__visualize_graph.py  13__optimize_node_faces.sh  13__visualize_graph.py  14__visualize_graph.py  15__build_atlas.py  16__auto_best_face_ids.py  16__upload_to_spaces.py  17__upload_everything_to_spaces.py  18__ensure_api_indexes.py  19__sync_has_face_images_to_spaces.py  (+20 more)
site/: build.sh  site_metadata.json
viz/: image_data.json  index.html  styles.css
viz_data/: atlas_manifest.json  dataset.json  (+1 more)
(+56 files in other folders)
